sizing bug on small screens.

--- a/src/app/components/title-screen/title-screen.component.css
+++ b/src/app/components/title-screen/title-screen.component.css
@@ -48,7 +48,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 10vw;
+    font-size: 8rem;
     border-style: double;
     border-color: #fff;
     border-width: 4px;
